[gd_scene load_steps=28 format=3 uid="uid://bo81aoqsayojr"]

[ext_resource type="Script" path="res://GameManager.gd" id="1_5txxt"]
[ext_resource type="Script" path="res://Player.gd" id="1_rl0cc"]
[ext_resource type="Script" path="res://PlatformManager.gd" id="2_g1p3f"]
[ext_resource type="Script" path="res://Void.gd" id="3_sqr8x"]
[ext_resource type="Texture2D" uid="uid://bxw500ha0esae" path="res://TCom_Ground_Grass02_header.jpg" id="4_xt7e4"]
[ext_resource type="Script" path="res://CameraFixed.gd" id="6_jaj2l"]
[ext_resource type="Script" path="res://CameraSemiFixed.gd" id="8_tmhmm"]
[ext_resource type="Script" path="res://CameraIsometric.gd" id="8_wvr5j"]
[ext_resource type="Texture2D" uid="uid://chud3ho2qjuty" path="res://AllSkyFree_Sky_EpicBlueSunset_Equirect.png" id="11_wdr2d"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_v64ib"]

[sub_resource type="PlaneMesh" id="PlaneMesh_a25as"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0pjr0"]
albedo_color = Color(0, 0.481029, 0, 1)
albedo_texture = ExtResource("4_xt7e4")

[sub_resource type="BoxShape3D" id="BoxShape3D_u3ao4"]
size = Vector3(1.53516, 3.35436, 1.69)

[sub_resource type="SphereMesh" id="SphereMesh_jkw0h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3x4fa"]
albedo_color = Color(0.168627, 0, 0.505882, 1)

[sub_resource type="SphereMesh" id="SphereMesh_q3fg7"]

[sub_resource type="SphereMesh" id="SphereMesh_4c86j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7n3rb"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_0gwtm"]

[sub_resource type="SphereMesh" id="SphereMesh_avtqx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0827t"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1yf21"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.533333, 1),
"transitions": PackedFloat32Array(0.707107, 1, 0.554785),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5), Vector3(0.8, 3, 1.5), Vector3(1.5, 1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.181778, 0), Vector3(0, 0.592235, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1rhho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.181778, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ujow5"]
_data = {
"RESET": SubResource("Animation_1rhho"),
"jump": SubResource("Animation_1yf21")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hnprg"]
panorama = ExtResource("11_wdr2d")
filter = false

[sub_resource type="Sky" id="Sky_l6a6l"]
sky_material = SubResource("PanoramaSkyMaterial_hnprg")

[sub_resource type="Environment" id="Environment_hbeuu"]
background_mode = 2
background_color = Color(0.934288, 0.821539, 0.714025, 1)
background_energy_multiplier = 2.48
background_canvas_max_layer = 10
sky = SubResource("Sky_l6a6l")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 1.35
tonemap_mode = 3
glow_enabled = true
adjustment_enabled = true
adjustment_brightness = 0.85
adjustment_contrast = 1.1

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("player")]
script = ExtResource("1_5txxt")
player = NodePath("Player")

[node name="PlatformManager" type="Node3D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_g1p3f")
player = NodePath("../Player")

[node name="Platforms" type="Node3D" parent="PlatformManager"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Start" type="Control" parent="UI"]
layout_direction = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartLabel" type="Label" parent="UI/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -11.5
offset_right = 101.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press \"Space Bar\" to start.
Arrow Keys: Character Movement
C Key: Toggle Camera Mode
Space Bar: Propel Forward
Mouse Movement (Semi-Fixed Camera): Move Camera
ESC Key: Quit Game"
horizontal_alignment = 1

[node name="Score" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI/Score"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Void" type="Area3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(-4.37114e-06, 0, -100, 0, 100, 0, 100, 0, -4.37114e-06, 0, 0, 0)
script = ExtResource("3_sqr8x")
player = NodePath("../Player")

[node name="VoidCollision" type="CollisionShape3D" parent="Void"]
shape = SubResource("WorldBoundaryShape3D_v64ib")

[node name="VoidMesh" type="MeshInstance3D" parent="Void/VoidCollision"]
transform = Transform3D(0.423931, 0, 0.905695, 0, 1, 0, -0.905695, 0, 0.423931, 0, 0, 0)
mesh = SubResource("PlaneMesh_a25as")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_0pjr0")

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("cameras")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_rl0cc")
cameras = [NodePath("CameraFixed"), NodePath("CameraSemiFixed"), NodePath("CameraIsometric_Left"), NodePath("CameraIsometric_Right")]

[node name="Sun" type="DirectionalLight3D" parent="Player"]
transform = Transform3D(0.997941, 0.0452687, -0.0454271, 0, 0.70834, 0.705872, 0.0641317, -0.704418, 0.706882, -12, 17.4959, 13.9347)

[node name="CameraFixed" type="Camera3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(1.19249e-08, 0.642788, -0.766044, 0, 0.766044, 0.642788, 1, -7.66516e-09, 9.13499e-09, -5, 3.5, 0)
script = ExtResource("6_jaj2l")
player = NodePath("../Character")

[node name="CameraSemiFixed" type="Camera3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(-4.37114e-08, 0.642788, -0.766044, 0, 0.766044, 0.642788, 1, 2.80971e-08, -3.34849e-08, -3, 4, 0)
script = ExtResource("8_tmhmm")
player = NodePath("../Character")

[node name="CameraIsometric_Right" type="Camera3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(-0.999981, 0.00546168, -0.00282472, -0.00181946, 0.17599, 0.98439, 0.00587355, 0.984377, -0.175977, -20, 15, 10)
projection = 1
size = 20.0
script = ExtResource("8_wvr5j")
player = NodePath("../Character")

[node name="CameraIsometric_Left" type="Camera3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(-0.00283447, -0.640962, 0.767568, 0.642788, 0.586823, 0.492404, -0.766039, 0.494779, 0.410339, -20, 15, -10)
projection = 1
size = 20.0
script = ExtResource("8_wvr5j")
player = NodePath("../Character")

[node name="CharacterCollision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.267578, 0.542107, 0.0168764)
shape = SubResource("BoxShape3D_u3ao4")

[node name="Character" type="MultiMeshInstance3D" parent="Player"]

[node name="Head" type="MeshInstance3D" parent="Player/Character"]
transform = Transform3D(0.239486, 0.181941, 1.46954, 0.0447099, 1.48707, -0.191398, -1.48008, 0.07436, 0.231998, 0, -0.181778, 0)
mesh = SubResource("SphereMesh_jkw0h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3x4fa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Character/Head"]
transform = Transform3D(0.244168, 0.0358999, 0.0399143, -0.0409429, 0.244753, 0.0303235, -0.0347222, -0.036153, 0.244923, -0.0543916, 0.146156, 0.406246)
mesh = SubResource("SphereMesh_q3fg7")
skeleton = NodePath("../MeshInstance3D2")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Player/Character/Head/MeshInstance3D"]
transform = Transform3D(0.333333, 0, -2.96059e-15, 0, 0.333333, 0, 2.96059e-15, 0, 0.333333, 0.0036, -0.0515528, 0.594353)
mesh = SubResource("SphereMesh_4c86j")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_7n3rb")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Player/Character/Head"]
transform = Transform3D(0.244168, 0.0358999, 0.0399143, -0.0409429, 0.244753, 0.0303235, -0.0347222, -0.036153, 0.244923, 0.196286, 0.102023, 0.356392)
mesh = SubResource("SphereMesh_0gwtm")
skeleton = NodePath("../../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Character/Head/MeshInstance3D2"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.0785308, -0.00751209, 0.521384)
mesh = SubResource("SphereMesh_avtqx")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_0827t")

[node name="Animation" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_ujow5")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hbeuu")
